✨ feat: 改行入れてメールアドレス追加

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       中学生プログラマーです。主に友達とツールサイト作ったり、スプレッドシートで遊んでたり、自分のやりたいことしてます。<br />使用言語はJavascript、Pythonくらいです。
     </p>
     <h2>各種リンク</h2>
-    <a href="https://qiita.com/kokecoco">Qiita</a>
-    <a href="https://blog.kokecoco.me/">ブログ(全然投稿してない)</a>
-    <a href="https://github.com/Kokecoco/">Github</a>
-    <a href="https://atcoder.jp/users/Kokecoco">AtCoder(まだ灰色です)</a>
+    <a href="https://qiita.com/kokecoco">Qiita</a><br />
+    <a href="https://blog.kokecoco.me/">ブログ(全然投稿してない)</a><br />
+    <a href="https://github.com/Kokecoco/">Github</a><br />
+    <a href="https://atcoder.jp/users/Kokecoco">AtCoder(まだ灰色です)</a><br />
+    <a href="mailto:kokecoco@kokecoco.me">メール</a>
     <p>...え、書くことこれだけ？</p>
   </body>
 </html>
